# commentary

./: .gitignore  Cargo.toml  Justfile  config.example.json  embed.html  package.json  tailwind.config.js
.github/workflows/: release.yml
debian/: commentary.service
resources/: index.css  index.html  index.js  index.mjs
src/: app.rs  app_error.rs  comment.rs  config.rs  database.rs  mailer.rs  main.rs  resource.rs  state.rs  template.rs  web.rs
src/app/: alive.rs  embed.rs  get_comments.rs  mod.rs  post_comment.rs
src/github/: mod.rs  read_initial_state.rs  update_state.rs
templates/: _comment.html  _commentary-comment.css  _commentary-comment.mjs  _commentary-form.css  _commentary-form.mjs  _global-styles.html  _layout.html  index.html
views/: index.html
